--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,16 @@
 astroid==2.2.5
 cachetools==3.1.1
-certifi==2019.6.16
+certifi==2019.9.11
 chardet==3.0.4
 docker-py==1.10.6
 docker-pycreds==0.4.0
 freeze==1.0.10
 google-api-core==1.14.2
 google-auth==1.6.3
+google-cloud-core==1.0.3
 google-cloud-pubsub==0.45.0
+google-cloud-storage==1.19.0
+google-resumable-media==0.4.0
 googleapis-common-protos==1.6.0
 grpc-google-iam-v1==0.12.3
 grpcio==1.23.0
@@ -18,14 +21,14 @@ mccabe==0.6.1
 mock==3.0.5
 pkg-resources==0.0.0
 protobuf==3.9.1
-pyasn1==0.4.6
+pyasn1==0.4.7
 pyasn1-modules==0.2.6
 pylint==2.3.1
 pytz==2019.2
 requests==2.22.0
 rsa==4.0
 six==1.12.0
--e git+https://OneWizzardBoi@bitbucket.org/tremium/tremium-py.git@13f502f81cfdcb7edc12128ba8381f75a756255f#egg=tremium&subdirectory=tremium
+-e git+https://OneWizzardBoi@bitbucket.org/tremium/tremium-py.git@33edf9502cbe44e41b321386e343e2c6e595e456#egg=tremium&subdirectory=tremium
 typed-ast==1.4.0
 urllib3==1.25.3
 websocket-client==0.56.0
