--- a/requirements.txt
+++ b/requirements.txt
@@ -1,34 +1,35 @@
-astroid==2.2.5
+astroid==2.3.1
 cachetools==3.1.1
 certifi==2019.9.11
 chardet==3.0.4
 docker-py==1.10.6
 docker-pycreds==0.4.0
 freeze==1.0.10
-google-api-core==1.14.2
+google-api-core==1.14.3
 google-auth==1.6.3
 google-cloud-core==1.0.3
-google-cloud-pubsub==0.45.0
-google-cloud-storage==1.19.0
-google-resumable-media==0.4.0
+google-cloud-pubsub==1.0.2
+google-cloud-storage==1.20.0
+google-resumable-media==0.4.1
 googleapis-common-protos==1.6.0
 grpc-google-iam-v1==0.12.3
-grpcio==1.23.0
+grpcio==1.24.1
 idna==2.8
 isort==4.3.21
-lazy-object-proxy==1.4.1
+lazy-object-proxy==1.4.2
 mccabe==0.6.1
 mock==3.0.5
 pkg-resources==0.0.0
-protobuf==3.9.1
+protobuf==3.10.0
 pyasn1==0.4.7
-pyasn1-modules==0.2.6
-pylint==2.3.1
-pytz==2019.2
+pyasn1-modules==0.2.7
+pylint==2.4.2
+pytz==2019.3
 requests==2.22.0
 rsa==4.0
 six==1.12.0
 typed-ast==1.4.0
-urllib3==1.25.3
+urllib3==1.25.6
 websocket-client==0.56.0
 wrapt==1.11.2
+redis==3.3.8
