--- a/tremium-hub/requirements.txt
+++ b/tremium-hub/requirements.txt
@@ -19,7 +19,6 @@ isort==4.3.21
 lazy-object-proxy==1.4.2
 mccabe==0.6.1
 mock==3.0.5
-pkg-resources==0.0.0
 protobuf==3.10.0
 pyasn1==0.4.7
 pyasn1-modules==0.2.7
@@ -29,6 +28,7 @@ requests==2.22.0
 rsa==4.0
 six==1.12.0
 typed-ast==1.4.0
+PyBluez==0.22
 urllib3==1.25.6
 websocket-client==0.56.0
 wrapt==1.11.2
