--- a/tremium-node/Dockerfile
+++ b/tremium-node/Dockerfile
@@ -10,13 +10,6 @@ RUN apt-get update
 RUN apt-get -y install cron
 RUN apt-get -y install usbutils bluez bluetooth libbluetooth-dev python-dev
 
-# installing docker
-RUN apt-get -y install lsb-release apt-transport-https ca-certificates curl gnupg2 software-properties-common
-RUN curl -fsSL https://download.docker.com/linux/debian/gpg | apt-key add -
-RUN add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/debian $(lsb_release -cs) stable"
-RUN apt-get update
-RUN apt-get -y install docker-ce docker-ce-cli containerd.io
-
 # installing python packages
 RUN pip install -r ./requirements.txt
 RUN pip install ./tremium
@@ -26,15 +19,15 @@ RUN rm ./requirements.txt
 ENV TREMIUM_MAIN_DIR /tremium-node
 ENV TREMIUM_CONFIG_FILE /tremium-hub/node-config.json
 
-# setting up the data-collector cronjob
-#COPY data-collector-cron /etc/cron.d/data-collector-cron
-#RUN chmod 0644 /etc/cron.d/data-collector-cron
-#RUN chmod 777 /tremium-hub/launch-data-collector.sh
-#RUN crontab /etc/cron.d/data-collector-cron
-
 # creating necessary empty directories
 RUN mkdir file-transfer-node
 RUN mkdir image-archives-node
+
+# setting up the update script cron job
+COPY update-node-cron /etc/cron.d/update-node-cron
+RUN chmod 0644 /etc/cron.d/update-node-cron
+RUN chmod 777 /tremium-node/update-node.sh
+RUN crontab /etc/cron.d/update-node-cron
 
 # testing (running something in the back ground)
 CMD ./launch-node-services.sh
