--- a/tremium-node/Dockerfile
+++ b/tremium-node/Dockerfile
@@ -1,5 +1,6 @@
 # Use an official Python runtime as a parent image
 FROM python:3.6.8
+FROM python:3.6.8-alpine
 
 # set working directory + copy necessary sources and folders
 WORKDIR /tremium-node
