--- a/tremium-node/config/node-config.json
+++ b/tremium-node/config/node-config.json
@@ -11,12 +11,15 @@
     "node-file-transfer-dir" : "./file-transfer-node",
     "update-manager-log-name" : "update-manager-logs.log",
     "bluetooth-client-log-name" : "bluetooth-client-logs.log",
+    "audio-data-generator-log-name" : "audio-data-generator-logs.log",
     "bluetooth-adapter-mac-client" : "BC:14:EF:68:4D:DB",
     "bluetooth-adapter-mac-server" : "B0:68:E6:23:91:1A",
     "bluetooth-port" : 25,
     "bluetooth-message-max-size" : 10000,
     "bluetooth-comm-timeout" : 5,
     "bluetooth-device-check-time" : 1200,
+    "audio_continuous_recording_len" : 60,
+    "audio_event_len" : 4,
     "node-redis-server-config" : {
         "host" : "localhost", 
         "port" : 6379,
