Audio recording from container works
	- fixed the Node Dockerfile
	- fixed the build script

	- worked on docs, removed info from notes ...

--- a/tremium-node/Dockerfile
+++ b/tremium-node/Dockerfile
@@ -8,6 +8,7 @@ COPY ./* /tremium-node/
 # installing os dependencies
 RUN apt-get update
 RUN apt-get -y install usbutils bluez bluetooth libbluetooth-dev python-dev
+RUN apt-get install -y libasound-dev portaudio19-dev libportaudio2 libportaudiocpp0
 
 # installing python packages
 RUN pip install -r ./requirements.txt
