Audio processing pipeline
	- Implemented audio processing pipeline (not tested)
	- Implemented audio classification pipeline (no classifier yet)
	* Classification from trained classifier is not available yet

	- Added new configurations
	- Added jupyter note book for pipeline testing and exploration

--- a/tremium-node/config/node-config.json
+++ b/tremium-node/config/node-config.json
@@ -18,9 +18,12 @@
     "bluetooth-message-max-size" : 10000,
     "bluetooth-comm-timeout" : 5,
     "bluetooth-device-check-time" : 1200,
-    "audio_continuous_recording_len" : 60,
-    "audio_event_len" : 4,
-    "audio_event_segment_len" : 1,
+    "audio-continuous-recording-len" : 60,
+    "audio-event-len" : 4,
+    "audio-event-segment-len" : 1,
+    "audio-model-path" : "",
+    "audio-model-periodic-label" : 1,
+    "audio-model-no-event-label" : 0,
     "node-redis-server-config" : {
         "host" : "localhost", 
         "port" : 6379,
