Periodic extract condition fix
	- periodic extraction mode is launched toggled from the node
	  config file.
	- extraction/classification  pipeline still not tested

--- a/tremium-node/config/node-config.json
+++ b/tremium-node/config/node-config.json
@@ -21,6 +21,7 @@
     "audio-continuous-recording-len" : 60,
     "audio-event-len" : 4,
     "audio-event-segment-len" : 1,
+    "audio-periodic-extract" : true,
     "audio-model-path" : "",
     "audio-model-periodic-label" : 1,
     "audio-model-no-event-label" : 0,
